Testing form value binding

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -4,6 +4,7 @@
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>authy-frontend</title>
+    <link rel="stylesheet" href="css/lux/bootstrap.min.css">
   </head>
   <body>
     <noscript>
